--- a/index.html
+++ b/index.html
@@ -22,8 +22,230 @@
 
   <!-- カレンダーセクション -->
   <div id="calendar" class="task-section active">
-    <h2>📅 カレンダー</h2>
-    <p>ここに日付ごとのカレンダー内容を入れる</p>
+   <h2>📅 カレンダー</h2>
+
+<h3>✅ 7月</h3>
+
+<h4>7/11（金）</h4>
+<ul>
+  <li>PV全体構成メモ作成</li>
+  <li>ナレーション台本ドラフト作成</li>
+</ul>
+
+<h4>7/12（土）</h4>
+<ul>
+  <li>ナレーション台本ブラッシュアップ</li>
+  <li>PV使用Live2Dキャラクターリスト作成</li>
+</ul>
+
+<h4>7/13（日）</h4>
+<ul>
+  <li>PV使用背景素材リストアップ</li>
+  <li>PV背景素材収集</li>
+</ul>
+
+<h4>7/14（月）</h4>
+<ul>
+  <li>BGM候補選定</li>
+  <li>SE候補選定</li>
+</ul>
+
+<h4>7/15（火）</h4>
+<ul>
+  <li>PV BGM仮当てテスト</li>
+</ul>
+
+<h4>7/16（水）</h4>
+<ul>
+  <li>PV編集ソフトプロジェクト準備</li>
+</ul>
+
+<h4>7/17（木）</h4>
+<ul>
+  <li>ウィンク立ち絵線画</li>
+</ul>
+
+<h4>7/18（金）</h4>
+<ul>
+  <li>ウィンク立ち絵塗り</li>
+</ul>
+
+<h4>7/19（土）</h4>
+<ul>
+  <li>ウィンクパーツ分け</li>
+</ul>
+
+<h4>7/20（日）</h4>
+<ul>
+  <li>ウィンクLive2Dモデリング</li>
+</ul>
+
+<h4>7/21（月）</h4>
+<ul>
+  <li>ウィンク表情差分作成</li>
+</ul>
+
+<h4>7/22（火）</h4>
+<ul>
+  <li>Live2D動作テスト</li>
+</ul>
+
+<h4>7/23（水）</h4>
+<ul>
+  <li>PVコンテ作成</li>
+</ul>
+
+<h4>7/24（木）</h4>
+<ul>
+  <li>PV編集1st ver作成</li>
+</ul>
+
+<h4>7/25（金）〜7/29（火）県外滞在</h4>
+<ul>
+  <li>（タスクなし）</li>
+</ul>
+
+<h4>7/30（水）</h4>
+<ul>
+  <li>PV演出エフェクト追加</li>
+</ul>
+
+<h4>7/31（木）</h4>
+<ul>
+  <li>PV編集最終チェック</li>
+</ul>
+
+<h3>✅ 8月</h3>
+
+<h4>8/1（金）</h4>
+<ul>
+  <li>ナレーション仮収録</li>
+</ul>
+
+<h4>8/2（土）</h4>
+<ul>
+  <li>PVサムネイル作成</li>
+</ul>
+
+<h4>8/3（日）</h4>
+<ul>
+  <li>公開告知文ドラフト作成</li>
+</ul>
+
+<h4>8/4（月）</h4>
+<ul>
+  <li>公開告知文ブラッシュアップ</li>
+</ul>
+
+<h4>8/5（火）</h4>
+<ul>
+  <li>公開告知画像素材準備</li>
+</ul>
+
+<h4>8/6（水）</h4>
+<ul>
+  <li>公開予約投稿設定</li>
+</ul>
+
+<h4>8/7（木）</h4>
+<ul>
+  <li>PV公開</li>
+</ul>
+
+<h4>8/8（金）</h4>
+<ul>
+  <li>レック立ち絵線画</li>
+</ul>
+
+<h4>8/9（土）</h4>
+<ul>
+  <li>レック立ち絵塗り</li>
+</ul>
+
+<h4>8/10（日）</h4>
+<ul>
+  <li>レックパーツ分け</li>
+</ul>
+
+<h4>8/11（月）</h4>
+<ul>
+  <li>レックLive2Dモデリング</li>
+</ul>
+
+<h4>8/12（火）</h4>
+<ul>
+  <li>レック表情差分作成</li>
+</ul>
+
+<h4>8/13（水）</h4>
+<ul>
+  <li>1章テキスト最終調整</li>
+</ul>
+
+<h4>8/14（木）</h4>
+<ul>
+  <li>1章チュートリアル仕様確認</li>
+</ul>
+
+<h4>8/15（金）</h4>
+<ul>
+  <li>瞬きギミック仕様書作成</li>
+</ul>
+
+<h4>8/16（土）</h4>
+<ul>
+  <li>瞬きギミック仮実装</li>
+</ul>
+
+<h4>8/17（日）</h4>
+<ul>
+  <li>瞬きギミック動作テスト</li>
+</ul>
+
+<h4>8/18（月）</h4>
+<ul>
+  <li>UIデザインドラフト作成</li>
+</ul>
+
+<h4>8/19（火）</h4>
+<ul>
+  <li>UIパーツ制作</li>
+</ul>
+
+<h4>8/20（水）</h4>
+<ul>
+  <li>UI配置テスト</li>
+</ul>
+
+<h4>8/21（木）</h4>
+<ul>
+  <li>体験版通しテスト1回目</li>
+</ul>
+
+<h4>8/22（金）</h4>
+<ul>
+  <li>バグ修正</li>
+</ul>
+
+<h4>8/23（土）</h4>
+<ul>
+  <li>テストプレイヤー募集</li>
+</ul>
+
+<h4>8/24（日）</h4>
+<ul>
+  <li>フィードバック対応</li>
+</ul>
+
+<h4>8/25（月）</h4>
+<ul>
+  <li>体験版公開ページ作成</li>
+</ul>
+
+<h4>8/26（火）〜8/31（日）</h4>
+<ul>
+  <li>（予備日、調整日、追加作業・休息日に設定）</li>
+</ul>
   </div>
 
   <!-- タスク一覧セクション -->
